Modified test for enterrrom